# thorfinn

./: CMakeLists.txt  README.md  build.sh
src/: config.cpp  config.h  file_watcher.cpp  file_watcher.h  main.cpp  pipeline.cpp  pipeline.h
